2013-01-19  Charlie Zender  <zender@uci.edu>

	* Pass CPY_GRP_METADATA _and_ CPY_VAR_METADATA to nco_xtr_dfn()

	* Systematize extraction list function names

	* Remove cruft from nco_grp_utl.[ch]

	* Implement new extraction list API in ncecat

	* Restructure nco_xtr_dfn() to isolate variable from group definitions
	Group metadata now handled by separate block executed iff PRN_VAR_METADATA
	This give user ability to turn-off all metadata copying
	Group metadata now copied for empty ancestors of all extracted variables
	Previously group metadata were only written to groups containing variables
	New algorithm: 1. Ensures group metadata written only once.
	2. Creates consistent state for group and variable extraction with flg_xtr
	3. Handles corner cases where groups introduced after nco_mk_xtr()
	by, e.g., associated coordinates and CF conventions, now have flg_xtr.
	Overall, groups now more equal in treatment to variables
	This may be useful in extending future functionality

2013-01-18  Charlie Zender  <zender@uci.edu>

	* Remove cruft from nco_grp_utl.[ch]

	* Rename functions for clarity and to facilitate cruft removal

	* Move MM3 code into nco_xtr_wrt()

	* Split nco_grp_var_mk_trv2() into nco_xtr_dfn() and nco_xtr_wrt()

	* Add (uninitialized) group ID members to trv_obj structure

	* Delete ncks -B switch and require -b fl_bnr instead
	This simplifies logic---now use fp_bnr instead of NCO_BNR_WRT

2013-01-15  Charlie Zender  <zender@uci.edu>

	* Place explicit netCDF3 path in nco_inq_grp_full_ncid_flg()

	* Safeguard potential illegal memory access in nco_mk_xtr() string manipulation

2013-01-14  Charlie Zender  <zender@uci.edu>

	* Fix bug introduced in 4.2.1 that causes ncea to break when handling
	files that do not contain a record dimension. Thanks to Martin Otte
	for reporting the bug and providing a working fix.
	http://nco.sf.net#bug_ncea_rec_var

	* Memory error in nco_mk_xtr() triggers segfaults in autoconf build
