@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco.h,v 1.217 2013-01-19 10:41:00 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco.h,v 1.218 2013-01-21 06:00:12 zender Exp $ */
 
 /* Purpose: netCDF Operator (NCO) definitions */
 
@@ -622,12 +622,13 @@ extern "C" {
     char nm[NC_MAX_NAME+1L]; /* [sng] Relative name (i.e., variable name or last component of path name for groups) */
     size_t  nm_lng; /* [sng] Length of short name */
     nco_obj_typ typ; /* [enm] netCDF4 object type: group or variable */
+    int grp_dpt; /* [nbr] Depth of group (root = 0) */
+    int grp_id_in; /* [id] Group ID in input file */
+    int grp_id_out; /* [id] Group ID in output file */
     int nbr_att; /* [nbr] Number of attributes */
     int nbr_var; /* [nbr] Number of variables (for group) */
     int nbr_dmn; /* [nbr] Number of dimensions */
     int nbr_grp; /* [nbr] Number of sub-groups (for group) */
-    int grp_id_in; /* [id] Group ID in input file */
-    int grp_id_out; /* [id] Group ID in output file */
     nco_bool flg_cf; /* [flg] Object matches CF-metadata extraction criteria */
     nco_bool flg_crd; /* [flg] Object matches coordinate extraction criteria */
     nco_bool flg_dfl; /* [flg] Object meets default subsetting criteria */
